<resources>
    <string name="app_name">Spot Notes</string>
    <string name="title_activity_main">Spot Notes</string>
    <string name="title_reminders">Reminders</string>
    <string name="title_records">Records</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_maps">Maps</string>
    <string name="settings_suggestions">Suggestions</string>
    <string name="settings_development">Development Options</string>
    <string name="settings_development_notify">Show Notification</string>
    <string name="activity_back">Back</string>
    <string name="settings_development_show_details">Show Details&#8230;</string>
    <string name="required">Required</string>
    <string name="msg_location_denied">Location is required for this app to work.</string>
    <string name="msg_no_location_provider">No location provider available</string>
    <string name="reminder_title_hint">Reminder&#8230;</string>
    <string name="notes_hint">Notes&#8230;</string>
    <string name="tab_inuse">In use</string>
    <string name="tab_trash">Trash</string>
    <string name="settings_suggestions_count">Suggestions are shown after this many records with the same name are created</string>
    <string name="settings_suggestions_enabled">Enable suggestions</string>
    <string name="title_details">Details</string>
    <string name="project_site_uri" translatable="false">https://github.com/ut-ykkr/SpotNotes</string>
    <string name="settings_about_website">Project site&#8230;</string>
    <string name="settings_about">About this app</string>
    <string name="record_title_hint">Record&#8230;</string>
    <string name="tab_location">Location</string>
    <string name="tab_details">Details</string>
    <string name="tab_records">Records</string>
    <string name="tab_maps">Maps</string>
    <string name="menu_add">Add&#8230;</string>
    <string name="menu_add_reminder">Add reminder&#8230;</string>
    <string name="menu_add_record">Add record&#8230;</string>
    <string name="settings_suggestions_summary">Show reminders suggestions based on records</string>
    <string name="settings_suggestions_count_title">Suggestions sensitivity</string>
    <string name="settings_development_show_stats">Show statistics…</string>
    <string name="settings_development_show_maps">Show Maps…</string>
    <string name="tab_by_title">By title</string>
    <string name="tab_by_date">By date</string>
    <string name="avg_time">Average:</string>
    <string name="total_time">Total:</string>
    <string name="format_duration">Duration: %s</string>
    <string name="format_start">Start: %s</string>
    <string name="format_finished">Finished: %s</string>
</resources>
