<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_reminders_list">

    <fragment
        android:id="@+id/navigation_reminders_list"
        android:name="org.menhera.spotnotes.ui.ReminderTabsFragment"
        android:label="@string/title_reminders"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/navigation_records_list"
        android:name="org.menhera.spotnotes.ui.RecordTabsFragment"
        android:label="@string/title_records"
        tools:layout="@layout/fragment_record_tabs" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="org.menhera.spotnotes.ui.MainSettingsFragment"
        android:label="@string/title_settings" />
</navigation>